--- a/MicroServices/TradeProducer/pyproject.toml
+++ b/MicroServices/TradeProducer/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+quixstreams = "^2.8.1"
+websocket-client = "^1.8.0"
 
 
 [build-system]
