--- a/MicroServices/RedPanda.yml
+++ b/MicroServices/RedPanda.yml
@@ -1,3 +1,5 @@
+#docker compose -f ./MicroServices/RedPanda.yml up -d
+#docker compose -f ./MicroServices/RedPanda.yml down
 name: redpanda
 networks:
   redpanda_network:
