KafkaToFS Script Working

--- a/MicroServices/FeaturePipeline/OHLCTradeAggregator/sample.env
+++ b/MicroServices/FeaturePipeline/OHLCTradeAggregator/sample.env
@@ -1,4 +1,5 @@
 #REDPANDASERVICENAME is declared in the dockercompose.yml
+#SECONDS is the number of seconds, for example 60
 DockerInternalKafkaBrokerAddress=REDPANDASERVICENAME:PORT
 LocalhostExternalKafkaBrokerAddress=localhost:PORT
 AggregationWindowSecondsOHLC=SECONDS
